--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 				<div class="col-md-6">
 					<figure class="bannerimg position-relative">
 						<div class="text-content" data-aos="fade-in">
-							<h1 class="display-1">Photographer & Film Maker</h1>
-							<h4 class="py-3">Los Angeles, USA</h4>
-							<a href="#" class="btn btn-dark px-5 py-3">Hire me</a>
+							<h1 class="display-1">Sound Mixing & Photography</h1>
+							<h4 class="py-3">Provo, UT, USA</h4>
+							<a href="#" class="btn btn-dark px-5 py-3">Book me</a>
 						</div>
 						<img src="images/banner.jpg" class="img-fluid" alt="photographer">
 					</figure>
@@ -139,7 +139,7 @@
 			<div class="row">
 
 				<div class="section-header text-center">
-					<h2 class="section-title">Portfolio</h2>
+					<h2 class="section-title">Photography</h2>
 					<p>These are actual works of <a href="https://www.pexels.com/@cottonbro/" target="_blank">cottonbro studio</a></p>
 				</div><!--section-header-->
 
@@ -216,7 +216,7 @@
 		<div class="container">
 
 			<div class="section-header my-5">
-				<h2 class="section-title">Blog</h2>
+				<h2 class="section-title">Sound</h2>
 			</div><!--section-header-->
 
 			<div class="row mb-5 pb-5">
@@ -376,5 +376,6 @@
 	<script type="text/javascript" src="js/script.js"></script>
 
 </body>
+
 
 </html>
