--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 				<li class="nav__list-item active-nav"><a href="index.html" class="hover-target">Home</a></li>
 				<li class="nav__list-item"><a href="about.html" class="hover-target">About <span class="badge bg-primary text-white fs-6">PRO</span></a></li>
 				<li class="nav__list-item"><a href="contact.html" class="hover-target">Contact <span class="badge bg-primary text-white fs-6">PRO</span></a></li>
-				<li class="nav__list-item"><a href="portfolio.html" class="hover-target">Portfolio <span class="badge bg-primary text-white fs-6">PRO</span></a></li>
-				<li class="nav__list-item"><a href="blog.html" class="hover-target">Blog <span class="badge bg-primary text-white fs-6">PRO</span></a></li>
+				<li class="nav__list-item"><a href="portfolio.html" class="hover-target">Photography <span class="badge bg-primary text-white fs-6">PRO</span></a></li>
+				<li class="nav__list-item"><a href="blog.html" class="hover-target">Sound <span class="badge bg-primary text-white fs-6">PRO</span></a></li>
 				<li class="nav__list-item"><a href="single.html" class="hover-target">Single <span class="badge bg-primary text-white fs-6">PRO</span></a></li>
 				<li class="nav__list-item"><a href="styles.html" class="hover-target">Styles <span class="badge bg-primary text-white fs-6">PRO</span></a></li>
 			</ul>
@@ -55,8 +55,8 @@
 						<ul id="slide-down" class="navbar-nav gap-4">
 							<li><a href="#billboard" class="nav-link active">Home</a></li>
 							<li><a href="#about" class="nav-link">About me</a></li>
-							<li><a href="#portfolio" class="nav-link">Portfolio</a></li>
-							<li><a href="#blog" class="nav-link">Blog</a></li>
+							<li><a href="#portfolio" class="nav-link">Photography</a></li>
+							<li><a href="#blog" class="nav-link">Sound</a></li>
 							<li><a href="#contact" class="nav-link">Contact</a></li>
 							<li><a class="btn btn-outline-dark rounded-pill" href="https://templatesjungle.gumroad.com/l/alena-portfolio-html-template" target="_blank"><strong>Get PRO</strong></a></li>
 						</ul>
@@ -91,7 +91,7 @@
 				<div class="col-md-6">
 					<figure class="bannerimg position-relative">
 						<div class="text-content" data-aos="fade-in">
-							<h1 class="display-1">Sound Mixing & Photography</h1>
+							<h2 class="display-1">Sound Mixing & Photography</h2>
 							<h4 class="py-3">Provo, UT, USA</h4>
 							<a href="#" class="btn btn-dark px-5 py-3">Book me</a>
 						</div>
@@ -379,3 +379,4 @@
 
 
 </html>
+
