--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="col-md-6">
 					<figure class="bannerimg position-relative">
 						<div class="text-content" data-aos="fade-in">
-							<h4 class="display-1">Sound Mixing & Photography</h4>
+							<h1 font-size: 16px; class="display-1">Sound Mixing & Photography</h1>
 							<h4 class="py-3">Provo, UT, USA</h4>
 							<a href="#" class="btn btn-dark px-5 py-3">Book me</a>
 						</div>
@@ -379,5 +379,6 @@
 
 
 </html>
+
 
 
