--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<h4 class="py-3">Provo, UT, USA</h4>
 							<a href="#" class="btn btn-dark px-5 py-3">Book me</a>
 						</div>
-						<img src="images/banner.jpg" class="img-fluid" alt="photographer">
+						<img src="images/banner.JPG" class="img-fluid" alt="photographer">
 					</figure>
 				</div>
 			</div>
@@ -379,6 +379,7 @@
 
 
 </html>
+
 
 
 
