--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<nav class="navbar navbar-expand-lg py-4">
 					<div class="navbar-brand">
 						<a href="index.html">
-							<img src="images/AMJ Logo Black (Trans).png" alt="logo">
+							<img src="images/amjlogoblacktrans.png" alt="logo">
 						</a>
 					</div>
 
@@ -378,6 +378,7 @@
 
 
 </html>
+
 
 
 
